Алгоритмы извлечения признаков вынесены в отдельный файл. Алгоритмы сопоставления признаков вынесены в отдельный файл. Добавлен алгоритм оценки качества изображений BRISQUE, который используется для оценки качества дубликатов - лучший дубликат попадает в основной раздел выходной папки. Устранены небезопасные обращения и путаница между индексами и положениями в таблице обработанных файлов. todo: нужно в программе доработать подсчет времени, чтобы отдельно было время на каждый из алгоритмов.

--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 db_path: processed_images.db
 duplicate_threshold: 0.6
 match_threshold: 0.75
-matcher: FLANN
-feature_extractor: SIFT
+matcher: BF  # Доступные: BF, FLANN
+feature_extractor: ORB # Доступные: SIFT, ORB
