--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 db_path: processed_images.db
 duplicate_threshold: 0.6
 match_threshold: 0.75
-matcher: FLANN  # Доступные: BF, FLANN
-feature_extractor: KAZE # Доступные: SIFT, ORB, KAZE
+matcher: BF  # Доступные: BF, FLANN
+feature_extractor: ORB # Доступные: SIFT, ORB, KAZE
