Добавлен метод AKAZE извлечения признаков. В методе ORB сделано извлечение 10000 ключевых точек вместо 500. Добавлен файл конфигурации алгоритма поиска титулов. Добавлен файл с методами поиска оптимальных параметров - в нем пока только расчет метрик схожести изображений.

--- a/config_logo.yml
+++ b/config_logo.yml
@@ -2,4 +2,4 @@ db_path: processed_images.db
 duplicate_threshold: 0.6
 match_threshold: 0.75
 matcher: FLANN  # Доступные: BF, FLANN
-feature_extractor: AKAZE # Доступные: SIFT, ORB, KAZE, AKAZE
+feature_extractor: KAZE # Доступные: SIFT, ORB, KAZE
